// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Separators should match snapshot 1`] = `
[
  <View
    accessibilityLabel="More options"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#E4E7EA",
        },
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#6C727A",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      More options
    </Text>
  </View>,
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "500",
            "marginHorizontal": 12,
            "textAlign": "left",
          },
          {
            "color": "#6C727A",
          },
        ]
      }
    >
      OR
    </Text>
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>,
  <View
    accessibilityLabel="Less options"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        },
        {
          "borderRadius": 4,
          "marginBottom": 12,
        },
        {
          "backgroundColor": "#E4E7EA",
        },
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#6C727A",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Less options
    </Text>
  </View>,
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 16,
            "fontWeight": "500",
            "marginHorizontal": 12,
            "textAlign": "left",
          },
          {
            "color": "#6C727A",
          },
        ]
      }
    >
      OR
    </Text>
    <View
      style={
        [
          {
            "flex": 1,
            "height": 1,
          },
          {
            "backgroundColor": "#CBCED1",
          },
        ]
      }
    />
  </View>,
]
`;

exports[`Story Snapshots: ServiceList should match snapshot 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />,
]
`;
